# fp2023

./: detect_latest_pr.ml  detect_latest_pr.py  detect_latest_pr.sh  exam.md  tasks.md
.github/: add_comment.ml
.github/workflows/: PR.yml  PRformat.yml  PrPost.yml
CSharpExceptions/: dune
CSharpExceptions/demos/: demoParse.ml  dune  parsingTests.t
CSharpExceptions/lib/: ast.ml  ast.mli  base_lib.mli  common_types.mli  dune  interpret_converters.mli  pars_tests.ml  pars_tests.mli  parser.ml  parser.mli
CSharpOOP/: CSharpOOP.opam  dune-project
Cypher/lib/: dune  parser.ml  test.ml
DRozhkov/demos/: demo.ml  demo.t  dune  test.t
DRozhkov/lib/: SecondTU.ml  ast.ml  ast.mli  dune  errors.ml  errors.mli  infer.ml  infer.mli  inferencer.ml  inferencer.mli  inter.ml  inter.mli  inter_test.ml  inter_test.mli  interpreter.ml  interpreter.mli  interpreter_test.ml  interpreter_test.mli  parser.ml  parser.mli  parser_test.ml  parser_test.mli  typedtree.ml  typedtree.mli
DRozhkov/lib/tests/: inter_test.ml  inter_test.mli  parser_test.ml  parser_test.mli
DSyresenkov/: README.md  dune
DSyresenkov/demos/: demoFactParse.ml  dune
DSyresenkov/lib/: ast.mli  dune  interpret.ml  parser.ml  tests.ml
FSharpActivePatterns/: README.md
FSharpActivePatterns/lib/: ast.ml  dune  inferencer.mli  parser.ml
FSharpUnitsOfMeasure/: README.md
FSharpUnitsOfMeasure/lib/: ast.ml  dune  interpret_error.ml  interpret_error.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml
FSharpUnitsOfMeasure/lib/demos/: demo.t  demos.ml  demos.t  dune
FSharpUnitsOfMeasure/lib/tests/: dune  interpreter_tests.ml  interpreter_tests.mli  parser_tests.ml  parser_tests.mli
Javascript/lib/: VTypes.mli  ast.ml  dune  interpreter.ml  interpreter.mli  interpreterTests.ml  parser.ml  parser.mli  tests.ml
Lambda/: Makefile  dune
Lambda/lib/: Pprintast.mli  ast.mli  dune  interpret.ml  parser.mli  tests.ml
Lambda2/: dune
OCaml + weak type variables/: OCamlWeakType.opam
OCaml+PolymorphicVariants/demos/: demoInfer.ml  demoInfer.t  demoInterpret.ml  demoInterpret.t
OCaml+PolymorphicVariants/lib/: dune  infer.ml  infer.mli  interpreter.ml  interpreter.mli  parser.ml  tests.ml  typedtree.ml  typedtree.mli
OCamlWithEffects/demos/: demoCharListSum.t  demoComplexEffect.t  demoFact.t  demoFoldLeft.t  demoGreaterOrLess.t  demoSafeDiv.t  dune
OCamlWithEffects/lib/: ast.mli  dune  parser.ml  run.ml  run.mli
OCaml_BidirectionalRecords/lib/: ast.ml  ast.mli  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml  tests.mli  typing.ml  typing.mli
OCaml_ExtensibleVariantTypes/: REPL.ml  repl.t
OCaml_ExtensibleVariantTypes/lib/: ast.ml  parser.ml  tests.ml
Ocaml + Labeled&OptionalArgs/: OcamlLabeled&OptionalArgs.opam  dune-project
Ocaml + Labeled&OptionalArgs/demos/: demo_fact.ml  dune
Ocaml + Labeled&OptionalArgs/lib/: ast.ml
Ocaml+ADT/demos/: dune
Ocaml+LabeledAndOptionalArgs/: OcamlLabeled&OptionalArgs.opam  README.md  dune-project
Ocaml+LabeledAndOptionalArgs/demos/: demoFact.t  dune
Ocaml+LabeledAndOptionalArgs/lib/: ast.ml  dune  interpret.ml  interpretTypes.ml  parser.ml  parserTests.ml  pprint.ml  tests.ml
OcamlOOP/: dune-project
OcamlOOP/demos/: dune
OcamlOOP/lib/: dune  parser.ml
Parallel_execution_simulation/: dune-project
Parallel_execution_simulation/demos/: demoParser.ml
Parallel_execution_simulation/lib/: ast.ml  dune  parser.ml
PrologDatalog/: README.md  dune-project
PrologDatalog/demos/: demo_fact.ml  dune  test.t
PrologDatalog/lib/: ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli
Python/: REPL.ml  dune  dune-project
Python/demos/: adding_class_to_env_test.ml  anon_func_test.ml  change_print_test.ml  dune  logic_test.ml  test.t
Python/lib/: ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml  tests.mli
Ruby/demos/: dune
Ruby/lib/: dune  parser.mli
Scheme_call_cc/: README.md
_build/: .digest-db  log
cov/: index.html  percent.txt
cov/C/: index.html  percent.txt
cov/CSharpExceptions/: index.html  percent.txt  projectname.txt
cov/CSharpOOP/: index.html  percent.txt  projectname.txt
cov/Cypher/: index.html  percent.txt
cov/DAhmetov/: index.html  percent.txt  projectname.txt
cov/DRozhkov/: index.html  percent.txt  projectname.txt
cov/DSyresenkov/: index.html  percent.txt  projectname.txt
cov/FSharpActivePatterns/: index.html  percent.txt
cov/FSharpUnitsOfMeasure/: index.html  percent.txt
cov/Go/: index.html  percent.txt
cov/Haskell/: index.html  percent.txt
cov/Javascript/: index.html  percent.txt
cov/LLVM_IR/: index.html  percent.txt  projectname.txt
cov/Lua/: index.html  percent.txt
cov/OCaml+PolymorphicVariants/: index.html  percent.txt  projectname.txt
cov/OCamlTyEff/: index.html  percent.txt  projectname.txt
cov/OCamlWithEffects/: index.html  percent.txt  projectname.txt
cov/OCamlWithWeakTypeVariables/: index.html  percent.txt  projectname.txt
cov/OCaml_BidirectionalRecords/: index.html  percent.txt  projectname.txt
cov/OCaml_ExtensibleVariantTypes/: index.html  percent.txt  projectname.txt
cov/Ocaml+ADT/: index.html  percent.txt  projectname.txt
cov/Ocaml+LabeledAndOptionalArgs/: index.html  percent.txt  projectname.txt
cov/Ocaml+printf/: index.html  percent.txt  projectname.txt
cov/OcamlOOP/: index.html  percent.txt  projectname.txt
cov/Parallel_execution_simulation/: index.html  percent.txt  projectname.txt
cov/PrologDatalog/: index.html  percent.txt  projectname.txt
cov/Python/: index.html  percent.txt
cov/Ruby/: index.html  percent.txt
cov/asm/: index.html  percent.txt
cov/demos/: demo.ml.html  demoFact.ml.html  demoParse.ml.html  demoParser.ml.html  demo_fact.ml.html  demo_obj.ml.html  demo_obj1.ml.html  haskellParser.ml.html
cov/lib/: ast.ml.html  interpret.ml.html  parser.ml.html  test.ml.html  tests.ml.html
cov/mini-SQL/: index.html  percent.txt  projectname.txt
demo/: dune  dune-project
demo/lib/: dune
mini-SQL/: dune-project
(+1049 files in other folders)
