(library
 (name FSharpUnitsOfMeasure_lib)
 (public_name FSharpUnitsOfMeasure.Lib)
 (modules Ast Parser)
 (libraries base angstrom)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))

(library
 (name tests)
 (modules tests)
 (libraries FSharpUnitsOfMeasure_lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))