(library
 (name LabeledOptionalArgs_lib)
 (public_name Ocaml+LabeledAndOptionalArgs.Lib)
 (modules Ast Parser Tests Interpret InterpretTypes Pprint)
 (libraries base angstrom)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))
