(executable
 (name demo_fact)
 (public_name demo_fact)
 (modules demo_fact)
 (libraries Python.Lib)
 (preprocess
  (pps ppx_show))
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps %{bin:demo_fact}))

(executable
 (name interpreter_fact_test)
 (public_name interpreter_fact_test)
 (modules interpreter_fact_test)
 (libraries Python.Lib)
 (preprocess
  (pps ppx_show))
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps %{bin:interpreter_fact_test}))

(executable
 (name parse_and_interpret_fact_test)
 (public_name parse_and_interpret_fact_test)
 (modules parse_and_interpret_fact_test)
 (libraries Python.Lib)
 (preprocess
  (pps ppx_show))
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps %{bin:parse_and_interpret_fact_test}))

(executable
 (name change_print_test)
 (public_name change_print_test)
 (modules change_print_test)
 (libraries Python.Lib)
 (preprocess
  (pps ppx_show))
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps %{bin:change_print_test}))