(executable
 (name demo_fact)
 (public_name demo_fact)
 (modules demo_fact)
 (libraries python_Lib)
 (preprocess
  (pps ppx_show))
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps %{bin:demo_fact}))

(executable
 (name interpreter)
 (public_name interpreter)
 (modules interpreter)
 (libraries python_Lib stdio)
 (preprocess
  (pps ppx_show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps %{bin:interpreter}))
